<resources>
    <string name="app_name">Location App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start">Start Holle Bolle Gijs Tour</string>

    <!-- standard description -->
    <string name="HolleBolleGijs">Holle Bolle Gijs</string>

    <!-- activity_overview -->
    <string name="entoen">En toen…</string>
    <string name="vervolgEntoen">Holle Bolle Gijs werd prijsgegeven</string>
    <string name="titelOverzicht">Holle Bolle Gijs</string>
    <string name="onderschriftOverzicht">Beleef avonturen in het sprookjesachtige land van de Efteling. Gooi je zorgen weg en geniet samen van de magie en betovering die Holle Bolle Gijs je te bieden heeft.</string>
    <string name="persoonlijkeGroet">Persoonlijke Groet</string>
    <string name="onderschriftPersoonlijkeGroet">\"Goedendag vrienden!\" Hier spreekt jullie vrolijke papierprins van de Efteling! Ik ben hier niet alleen om jullie afval op te eten, maar ook om jullie dag een beetje magischer te maken.</string>
    <string name="knopPersoonlijkeGroet">Jouw persoonlijke groet</string>
    <string name="speurtocht">Speurtocht</string>
    <string name="onderschriftSpeurtocht">Bereid je voor op een reis vol verrassingen en ontdekkingen terwijl jullie door het magische landschap zullen dwalen. Bezoek de gehele familie en wordt beloond door de ontdekkingsexperts van de Efteling.</string>
    <string name="knopSpeurtocht">Jouw verzameling</string>

    <!-- activity_stamboom -->
    <string name="titelStamboom">Stamboom Holle Bolle Gijs</string>
    <string name="onderschriftStamboom">Verzamel al de bekende familieleden!</string>
    <string name="hollebollegijsmap">Holle Bolle Gijs kaart</string>
    <string name="voltooiStamboom">Voltooi Stamboom</string>
    <string name="counter_text">%1$d / %2$d</string>
    <string name="titelSpeurtocht">Speurtocht</string>
    <string name="privacy">Privacyregelgeving</string>

    <!-- activity_help -->
    <string name="uitlegstamboom">Goedendag avonturiers!\n
        De speurtocht naar Holle Bolle Gijs werkt als volgt:\n
        1. Loop door het park en geniet van uw bezoek.\n
        2. Terwijl u rondloopt zullen enkele familieleden van Holle Bolle Gijs op uw pad bevinden.\n
        3. Bezoek en benuttig deze papiersmullers.\n
        4. In de app zal automatisch elk ontdekte familielid worden weergegeven zodra u deze bezocht heeft.\n
        5. Na het voltooien van de stamboom ligt er een beloning op u te wachten.
    </string>
    <string name="privacyverklaring">Privacyregelgeving</string>
    <string name="verzamelStamboom">Verzamel stamboom</string>

    <!-- activity_info -->
    <string name="verzamelstamboom">Verzamel stamboom</string>
    <string name="infostamboom">Voordat we beginnen!\n
        Enkele familieleden uit de stamboom van Holle Bolle Gijs hebben gedurende de jaren een functie elders gekregen:\n
        1. Matroos Gijs is sinds de bouw van de Danse Macabre weer op reis gegaan en vetrokken uit de Efteling.\n
        2. Station Gijs bevind zich momenteel op het sprookjesstation en wacht op de trein.\n
        3. Visje Gijs is omgetoverd tot een ornament en houd nu de wensbron dag en nacht in de gaten.\n
        Daarom krijgt u deze familieleden cadeau.</string>

    <!-- activity_beloning -->
    <string name="infobeloning">Avonturiers, wat hebben jullie het goed gedaan! Alle familieleden zijn gevonden en de stamboom is compleet.\n\n
        De bijbehorende beloning ligt voor jullie klaar. Deze is op te halen bij de uitgang van het park.\n\n
        Gebruik de onderstaande code om uw beloning in ontvangst te nemen.
    </string>
    <string name="codeweergeven">Geef code weer</string>
    <string name="codesluiten">Beloning opgehaald</string>

    <!-- activity_starttour -->
    <string name="nameninvoer">Namen invoeren</string>
    <string name="vulnamenin">Vul namen in</string>
    <string name="vulnaamin">Vul je naam in</string>
    <string name="gaverder">Verder</string>
    <string name="terug">Terug</string>
    <string name="titelPersoonlijkegroet">Persoonlijke groet</string>
    <string name="privacyregelgeving">Privacyregelgeving</string>
    <string name="startPersoonlijketour">Start persoonlijke tour</string>

</resources>