<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:contentDescription="@string/HolleBolleGijs"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/topimgoverzicht" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="77dp"
                    android:layout_marginTop="115dp"
                    android:layout_marginEnd="83dp"
                    android:fontFamily="@font/anton_pieck"
                    android:gravity="center"
                    android:text="@string/entoen"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="77dp"
                    android:layout_marginTop="138dp"
                    android:layout_marginEnd="83dp"
                    android:fontFamily="@font/anton_pieck"
                    android:gravity="center"
                    android:text="@string/vervolgEntoen"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="97dp"
                android:layout_height="94dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/HolleBolleGijs"
                app:srcCompat="@drawable/hbgicon" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:text="@string/titelOverzicht"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/onderschriftOverzicht"
                android:gravity="center"
                android:textSize="16sp" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/borderoverview"
                android:layout_margin="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/drieInEenAfbeeldingNaam"
                    android:layout_width="wrap_content"
                    android:layout_height="183dp"
                    android:contentDescription="@string/HolleBolleGijs"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/afbeeldingindrienaam" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/persoonlijkeGroet"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:text="@string/onderschriftPersoonlijkeGroet" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="-8dp"
                        android:layout_marginBottom="-8dp"
                        android:background="@null"
                        android:src="@drawable/witteknop"
                        android:contentDescription="@string/HolleBolleGijs"
                        android:scaleType="fitCenter"
                        android:layout_centerInParent="true"
                        android:onClick="starttouractivity"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/knopPersoonlijkeGroet"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:layout_centerInParent="true"
                        android:onClick="starttouractivity"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/borderoverview"
                android:layout_margin="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/drieInEenAfbeeldingSpeurtocht"
                    android:layout_width="wrap_content"
                    android:layout_height="183dp"
                    android:contentDescription="@string/HolleBolleGijs"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/afbeeldingindriespeurtocht" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/speurtocht"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="16sp"
                    android:text="@string/onderschriftSpeurtocht" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="-8dp"
                        android:layout_marginBottom="-8dp"
                        android:background="@null"
                        android:onClick="stamboomactivity"
                        android:src="@drawable/witteknop"
                        android:contentDescription="@string/HolleBolleGijs"
                        android:scaleType="fitCenter"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/knopSpeurtocht"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:onClick="stamboomactivity"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/imageViewMenu"
        android:contentDescription="@string/HolleBolleGijs"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/menu"
        android:scaleType="fitXY"
        android:onClick="mainactivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


