<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_popup"
    android:orientation="vertical">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:text="@string/vulnamenin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/vulnaamin"
                android:padding="8dp" />

            <!-- Leeg EditText voor dynamische toevoeging -->

            <EditText
                android:id="@+id/edittextname2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/vulnaamin"
                android:padding="8dp" />

            <EditText
        android:id="@+id/extraEditText"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_border"
        android:padding="8dp"
        android:hint="@string/vulnaamin" />




    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/arrow" />

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_centerInParent="true"
        android:background="@null"
        android:contentDescription="@string/HolleBolleGijs"
        android:scaleType="fitCenter"
        android:src="@drawable/rodeknop"
        android:text="@string/start"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/startspeurtocht"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"/>



</RelativeLayout>
        </LinearLayout>
</ScrollView>
    </LinearLayout>