<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor" >

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bordertoppages"
        android:id="@+id/whiteTopBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="318dp"
                android:layout_height="327dp"
                android:layout_marginTop="84dp"
                android:layout_gravity="center"
                android:contentDescription="@string/HolleBolleGijs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/stamboomgijsstart" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titelStamboom"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/onderschriftStamboom"
                android:gravity="center"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="-8dp"
                    android:layout_marginBottom="-8dp"
                    android:background="@null"
                    android:onClick="stamboomactivity"
                    android:src="@drawable/grijzeknop"
                    android:contentDescription="@string/HolleBolleGijs"
                    android:scaleType="fitCenter"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hollebollegijsmap"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/redtextbutton"
                android:onClick="stamboomactivity" />



        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewMenu"
        android:contentDescription="@string/HolleBolleGijs"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:src="@drawable/menu"
        android:scaleType="fitXY"
        android:onClick="mainactivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>